Correct author name in meta tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Jaeyun Sim</title>
 
-    <meta name="author" content="Jaeyoon Shim">
+    <meta name="author" content="Jaeyun Sim">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
     
