--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <tr style="padding:0px">
                   <td style="padding:2.5%;width:63%;vertical-align:middle">
                     <p class="name" style="text-align: center;">
-                      Jaeyoon Shim
+                      Jaeyun Sim
                     </p>
                     <p style="text-align: center;">Hi there! I'm a PhD candidate at <a href="https://mecha.skku.ac.kr/roboticsinnovatory/">Robotics Innovatory, Sungkyunkwan University</a>, South Korea, under the supervision of <a href="https://scholar.google.co.kr/citations?user=EDrjHWsAAAAJ&hl=ko">Prof.Hyouk Ryeol Choi</a></p>
                     <p style="text-align: center;">My research focuses on developing robotic solutions for <strong>physical human-robot interaction (PHRI)</strong> and <strong>intelligent robotic polishing</strong> using wrist force/torque sensors and indirect force control. </p>
@@ -29,7 +29,7 @@
                       <a href="mailto:wodbs02221@gmail.com">Email</a> &nbsp;/&nbsp;
                       <a href="https://zigzag-mountain-27e.notion.site/RESUME-138e5051909080c58e7acf0f11df0c2b">CV</a> &nbsp;/&nbsp;
                       <a href="https://scholar.google.co.kr/citations?user=zD0o-50AAAAJ&hl=ko">Scholar</a> &nbsp;/&nbsp;
-                      <a href="https://github.com/kinggotgamja">Github</a>
+                      <a href="https://github.com/MeChanJshim">Github</a>
                     </p>
                   </td>
                   <td style="padding:2.5%;width:37%;max-width:37%">
